--- a/css/style.css
+++ b/css/style.css
@@ -298,12 +298,12 @@ h1, h2, h3, h4, h5,
     box-shadow: none !important; }
 
 .site-section {
-  padding: 2.5em 0; }
+  padding: 2em 0; }
   @media (min-width: 768px) {
     .site-section {
-      padding: 5em 0; } }
+      padding: 3em 0; } }
   .site-section.site-section-sm {
-    padding: 4em 0; }
+    padding: 2em 0; }
 
 .site-footer {
   padding: 4em 0;
@@ -495,8 +495,8 @@ h1, h2, h3, h4, h5,
     .site-navbar .site-navigation .site-menu > li {
       display: inline-block; }
       .site-navbar .site-navigation .site-menu > li > a {
-        margin-left: 15px;
-        margin-right: 15px;
+        margin-left: 35px;
+        margin-right: 65px;
         padding: 20px 0px;
         color: #000 !important;
         display: inline-block;
@@ -820,10 +820,10 @@ h1, h2, h3, h4, h5,
     color: #fff; }
 
 .site-section {
-  padding: 7rem 0; }
+  padding: 2rem 0; }
   @media (max-width: 991.98px) {
     .site-section {
-      padding: 3rem 0; } }
+      padding: 1rem 0; } }
 
 .block-heading-1 span {
   text-transform: uppercase;
@@ -1686,4 +1686,23 @@ h1, h2, h3, h4, h5,
     max-width: 80px; }
   .htxt {
     font-size: 1.8em;
+    font-weight: 400;
+  }
+  .card{
+    text-align: center;
+    padding: 20px;
+    font-size: 20px;
+    font-weight: bold ;
+    text-transform: uppercase;
+  }
+  .card-body{
+    text-align: justify;
+    font-style: normal;
+    color: #000;
+    padding: 5px;
+    font-size: 16px;
+    text-transform: none;
+  }
+  .card-body a{
+    color: #000;
   }
