--- a/css/style.css
+++ b/css/style.css
@@ -1706,3 +1706,10 @@ h1, h2, h3, h4, h5,
   .card-body a{
     color: #000;
   }
+  .card-head{
+    background-color: #888;
+  }
+  .brand{
+    background-color: #43ab92;
+  }
+
