--- a/css/style.css
+++ b/css/style.css
@@ -1706,6 +1706,9 @@ h1, h2, h3, h4, h5,
   .card-body a{
     color: #000;
   }
+  .card-head{
+    font-weight: 400;
+  }
   .brand{
     background-color: #43ab92;
   }
