--- a/css/style.css
+++ b/css/style.css
@@ -1688,6 +1688,10 @@ h1, h2, h3, h4, h5,
     font-size: 1.8em;
     font-weight: 400;
   }
+  .logo{
+    line-height: 1;
+    font-weight: 400;
+  }
   .card{
     text-align: center;
     padding: 20px;
