--- a/css/style.css
+++ b/css/style.css
@@ -1691,6 +1691,7 @@ h1, h2, h3, h4, h5,
   .logo{
     line-height: 1;
     font-weight: 400;
+    color: #000;
   }
   .card{
     text-align: center;
