--- a/css/style.css
+++ b/css/style.css
@@ -1747,4 +1747,8 @@ h1, h2, h3, h4, h5,
     text-transform: uppercase;
     font-size: 16px;
   }
+  .serv img{
+    max-width: 100%;
+    height: auto;
+  }
 
